--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,20 @@
 {
     
     "builds": [
-      {
+      
+        { "src": "frontend/package.json", 
+        "use": "@vercel/static-build",
+         "config": { 
+          "buildCommand": "npm install && npm run build",
+          "outputDirectory": "build" }
+         },
+        {
         "src": "testdjango/wsgi.py",
         "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+        "config": { "maxLambdaSize": "15mb", 
+        "runtime": "python3.9" }
       }
+    
     ],
     "routes": [
      
@@ -17,7 +26,16 @@
       {
         "src": "/(.*)",
         "dest": "testdjango/wsgi.py"
-      }
+      },
+      { "src": "/api/(.*)", 
+      "dest": "testdjango/wsgi.py" },
+      { "src": "/(.*)",
+       "dest": "build/index.html" }
     ]
+   
+  
   }
+ 
+   
+
   
