--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 
 {
-    
+    "version":2,
     "builds": [
       
        
@@ -9,6 +9,12 @@
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", 
         "runtime": "python3.9" }
+      },{
+        "src":"build.sh",
+        "use":"@vercel/static-build",
+        "config":{
+          "distDir":"staticfiles_builds"
+        }
       }
     
     ],
