--- a/vercel.json
+++ b/vercel.json
@@ -30,7 +30,11 @@
       }
       
       
-    ]
+    ],
+      "rewrites": [
+        {"source": "/static/(.*)", "destination": "/static/$1"}
+      ]
+    
    
   
   }
